# data-analysis-agent-suite

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  SPECIFICATION.md  TODO.md  pyproject.toml  run_full_pipeline.py
.gemini/: settings.json
.gemini/agents/: data-analyzer.md  data-cleaner.md  data-visualizer.md  exec-summarizer.md  full-analysis.md  report-writer.md
agents/: data-analyzer.md  data-cleaner.md  data-visualizer.md  exec-summarizer.md  full-analysis.md  report-writer.md
examples/: sample_data.csv  sample_data.xlsx
src/: __init__.py
src/analysis/: __init__.py  correlations.py  reporter.py  segmentation.py  statistics.py  trends.py  utils.py
src/cleaning/: __init__.py  loader.py  profiler.py  reporter.py  transformers.py  utils.py  validators.py
src/orchestration/: __init__.py  discovery.py  manifest.py  pipeline.py
src/reporting/: __init__.py  (+5 more)
templates/: analysis_report.md  cleaning_report.md  dashboard.html  executive_summary_template.md  report_template.md
tests/: __init__.py  conftest.py  test_analysis_integration.py  test_charts.py  test_correlations.py  test_dashboard.py  test_generator.py  test_integration.py  test_loader.py  test_orchestration.py  test_report_generator.py  test_report_integration.py  test_report_loader.py  test_report_sections.py  test_report_styles.py  test_segmentation.py  test_statistics.py  test_summary_extractor.py  test_summary_formatter.py  test_summary_generator.py  test_summary_integration.py  test_summary_loader.py  test_transformers.py  test_trends.py  test_validators.py  test_visualization_integration.py
(+11 files in other folders)
